# Platformer

./: .gitignore  CMakeLists.txt  README.md
3rdpart/: vector2.h
include/: animation.h  camera.h  game.h  gameplay.h  gamestate.h  gamestatemanager.h  mainmenu.h  map.h  player.h  resourcemanager.h
resources/maps/: test.json
src/: animation.cpp  camera.cpp  game.cpp  gameplay.cpp  gamestatemanager.cpp  main.cpp  mainmenu.cpp  map.cpp  player.cpp  resourcemanager.cpp
